spinnaker/deck.yml
apiVersion: v1
kind: Service
metadata:
  namespace: spinnaker
  name: deck
  labels:
    app: deck
spec:
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: deck
    tier: deck
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spinnaker
  name: deck
  labels:
    app: deck
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deck
        tier: deck
    spec:
      containers:
      - image: quay.io/spinnaker/deck:latest
        name: deck
        ports:
        - containerPort: 9000
          name: deck
